--- a/QQ2YY.html
+++ b/QQ2YY.html
@@ -160,21 +160,21 @@ html,body{
 <body>
 
 <h1 class="textCon">
-      <div class="words">上进小菜猪，情人节快乐！</div>
-      <div class="words">今天是我们恋爱的第</div>
+      <div class="words">YY小宝贝，半年纪念日快乐！</div>
+      <div class="words">今天是我们处对象的第</div>
         <div class="days">
             <span class="days-number">0</span>
             <span class="days-label">天</span>
         </div>
         <div class="seconds">1 hours 5 minutes 20 seconds</div>
         <br /><br />
-        <div class="words"><h5>执手相看泪眼，竟无语凝噎。</h5></div>
-        <div class="words"><h5>一生一世，携手共进。</h5></div>
-        <div style="text-indent:16em;">——XXX</div>
+        <div class="words"><h5>“感谢YY，在我最困难的时候与我相知、相识和相恋
+并一直鼓励帮助着我。我们走到了现在并即将走向未来。”</h5></div>
+        <div style="text-indent:16em;">——QQ</div>
 </div>
 <div class="heart"></div>
 <script >
-    var arr = "2020-07-9 00:03:35".split(/[- :]/);//修改恋爱纪念日
+    var arr = "2021-11-19 00:14:00".split(/[- :]/);//修改恋爱纪念日
 var box = document.getElementsByClassName('textCon')[0];
 function init() {
     var width = box.offsetWidth;
